Update index again

--- a/index.html
+++ b/index.html
@@ -7,18 +7,21 @@
 <body>
 
 <header>
+
+  <img id="logo" src="img/m.jpg">
+
   <nav>
-    <a href="#">Home</a>
-    <a href="www.google.com">Google</a>
-    <a href="#">Home 3</a>
-    <a href="#">Home 4</a>
+    <a href="index.html">Home</a>
+    <a href="#">About Me</a>
+    <a href="#">Projects</a>
+    <a href="#">Contact Me</a>
   </nav>
 </header>
 
-    
+
 </body>
 
 <footer>
-
+<p>Copyright 2021.</p>
 </footer>
 </html>
