--- a/index.html
+++ b/index.html
@@ -2,26 +2,52 @@
 <html lang="en" dir="ltr">
 <head>
     <meta charset="utf-8">
-    <title>Mark Mina</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Mark Mina | My Profile</title>
+    <link rel="stylesheet" type="text/css" href="css/main.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
+
 <body>
 
-<header>
+  <script src="main.js"></script>
 
   <img id="logo" src="img/m.jpg">
 
-  <nav>
-    <a href="index.html">Home</a>
-    <a href="#">About Me</a>
-    <a href="#">Projects</a>
-    <a href="#">Contact Me</a>
-  </nav>
-</header>
+  <header>
+    <div class="topnav" id="myTopnav">
+      <a href="index.html">Home</a>
+      <a href="about.html">About Me</a>
+      <a href="projects.html">Projects</a>
+      <a href="contact.html">Contact Me</a>
+      <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+        <i class="fa fa-bars"></i></a>
+    </div>
+  </header>
 
+  <section id="home">
+    <div class="container">
+    <div class="carousel">
+      <div class="carousel__face"><span>Baguio</span></div>
+      <div class="carousel__face"><span>Baler</span></div>
+      <div class="carousel__face"><span>Caleruega</span></div>
+      <div class="carousel__face"><span>Davao</span></div>
+      <div class="carousel__face"><span>Pampanga</span></div>
+      <div class="carousel__face"><span>Ilocos</span></div>
+      <div class="carousel__face"><span>Laki Beach</span></div>
+      <div class="carousel__face"><span>Burias</span></div>
+      <div class="carousel__face"><span>Binacayan</span></div>
+    </div>
+    </div>
+
+  </section>
 
 </body>
 
 <footer>
-<p>Copyright 2021.</p>
+  <p id="foo">© Copyright 2021. All Rights Reserved.</p>
+  <p id="extra"></p>
 </footer>
+
+
 </html>
