--- a/projects.html
+++ b/projects.html
@@ -18,6 +18,7 @@
     <div class="topnav" id="myTopnav">
       <a href="index.html">Home</a>
       <a href="about.html">About Me</a>
+        <a href="blogs.html">Blogs</a>
       <a href="projects.html">Projects</a>
       <a href="contact.html">Contact Me</a>
       <a href="javascript:void(0);" class="icon" onclick="myFunction()">
