--- a/index.html
+++ b/index.html
@@ -28,17 +28,7 @@
 
   <section id="home">
     <div class="container">
-    <div class="carousel">
-      <div class="carousel__face"><span>Baguio</span></div>
-      <div class="carousel__face"><span>Baler</span></div>
-      <div class="carousel__face"><span>Caleruega</span></div>
-      <div class="carousel__face"><span>Davao</span></div>
-      <div class="carousel__face"><span>Pampanga</span></div>
-      <div class="carousel__face"><span>Ilocos</span></div>
-      <div class="carousel__face"><span>Laki Beach</span></div>
-      <div class="carousel__face"><span>Burias</span></div>
-      <div class="carousel__face"><span>Binacayan</span></div>
-    </div>
+    <p><i>"You never change things by fighting the existing reality. To change something, build a new model that makes the existing model obsolete."</i> -Buckminster Fuller</p>
     </div>
 
   </section>
