--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@
 
   <section id="home">
     <div class="container">
-    <p><i>"You never change things by fighting the existing reality. To change something, build a new model that makes the existing model obsolete."</i> -Buckminster Fuller</p>
+    <p><i>"You never change things by fighting the existing reality. To change something, build a new model that makes the existing model obsolete."</i></p>
+        <footer>Buckminster Fuller</footer>
     </div>
 
   </section>
