--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
   <section id="home">
     <div class="container">
     <p><i>"You never change things by fighting the existing reality. To change something, build a new model that makes the existing model obsolete."</i></p>
-        <footer>Buckminster Fuller</footer>
+        <p><small>--Buckminster Fuller</small></p>
     </div>
 
   </section>
