--- a/about.html
+++ b/about.html
@@ -28,17 +28,17 @@
 
 <div class="flex-container-ab">
   <section id="sec1">
-    <h2 id="About">About Me</h2>
-
+    <h2 id="About">About Me</h2>    
+    <div id="content">
       <ul>
         <li>graduate of 4-year Computer Science course in P.U.P.</li>
         <li>worked as a Data Analyst in Sencor (2007-2010)</li>
         <li>worked as an I.T. Specialist in JS Unitrade Merchandise Inc. (2011-2012)</li>
         <li>worked as a Senior Software Developer at VXI Global (2012-2019)</li>
-        <li>proficient in using .Net technologies specifically ASP, C#, VB, Entity Framework</li>
-        <li>also proficient in the following technologies: SQL, HTML, CSS, Photoshop, basic video editing.</li>
+        <li>proficient in using .Net technologies specifically ASP, C#, VB</li>
+        <li>also proficient in the following technologies: SQL, HTML, CSS, Bootstrap, Git, Photoshop, basic video editing.</li>
       </ul>
-
+    </div>
   </section>
 </div>
 </body>
