--- a/projects.html
+++ b/projects.html
@@ -27,7 +27,7 @@
   </header>
 
   <section id="sec2">
-    <h2 id="Projects / Personal experiments">Projects</h2>
+    <h2 id="Projects">Projects / Personal experiments</h2>
 
     <p>- Page under construction -</p>
   </section>
