--- a/about.html
+++ b/about.html
@@ -18,7 +18,6 @@
     <div class="topnav" id="myTopnav">
       <a href="index.html">Home</a>
       <a href="about.html">About Me</a>
-      <a href="blogs.html">Blogs</a>
       <a href="projects.html">Projects</a>
       <a href="contact.html">Contact Me</a>
       <a href="javascript:void(0);" class="icon" onclick="myFunction()">
@@ -29,14 +28,15 @@
 <div class="flex-container-ab">
   <section id="sec1">
     <h2 id="About">About Me</h2>    
+	<p><small>My name is Mark Anthony Mina. Born in the Philippines.</small></p>
     <div id="content">
       <ul>
-        <li>graduate of 4-year Computer Science course in P.U.P.</li>
+        <li>graduated as a bachelor of Computer Science (4-year course) in Polytechnic University of the Philippines</li>
         <li>worked as a Data Analyst in Sencor (2007-2010)</li>
         <li>worked as an I.T. Specialist in JS Unitrade Merchandise Inc. (2011-2012)</li>
         <li>worked as a Senior Software Developer at VXI Global (2012-2019)</li>
-        <li>proficient in using .Net technologies specifically ASP, C#, VB</li>
-        <li>also proficient in the following technologies: SQL, HTML, CSS, Bootstrap, Git, Photoshop, basic video editing.</li>
+        <li>proficient in using .Net technologies specifically ASP (Web Forms), C#, VB</li>
+        <li>also proficient in the following technologies: MS SQL, HTML, CSS, basic Javascript, Bootstrap, Git, Photoshop, basic video editing.</li>
       </ul>
     </div>
   </section>
