--- a/projects.html
+++ b/projects.html
@@ -30,6 +30,7 @@
     <h2 id="Projects">Projects / Experiments</h2>
 
     <p>- Page under construction -</p>
+      <p><a href="https://fastened-throttle.000webhostapp.com/">Javascript Game</a></p>
   </section>
 
 </body>
