--- a/projects.html
+++ b/projects.html
@@ -31,6 +31,7 @@
 
     <p>- Page under construction -</p>
       <p><a href="https://fastened-throttle.000webhostapp.com/">Javascript Game</a></p>
+      <p><a href="https://github.com/kramanim/BTC-Monitor">Bitcoin Price Monitor</a></p>
   </section>
 
 </body>
