--- a/projects.html
+++ b/projects.html
@@ -29,7 +29,7 @@
   <section id="sec2">
     <h2 id="Projects">Projects / Experiments</h2>
 
-    <p>- Page under construction -</p>
+      <p><small>- Page under construction -</small></p>
       <p><a href="https://fastened-throttle.000webhostapp.com/">Javascript Game</a></p>
       <p><a href="https://github.com/kramanim/BTC-Monitor">Bitcoin Price Monitor</a></p>
   </section>
