--- a/projects.html
+++ b/projects.html
@@ -29,9 +29,20 @@
   <section id="sec2">
     <h2 id="Projects">Projects / Experiments</h2>
 
-      <p><small>- Page under construction -</small></p>
-      <p><a href="https://fastened-throttle.000webhostapp.com/">Javascript Game</a></p>
-      <p><a href="https://github.com/kramanim/BTC-Monitor">Bitcoin Price Monitor</a></p>
+    <p>-- Page under construction --</p>
+        
+        <br/>
+        <div style="text-align: center;">
+          <a href="https://fastened-throttle.000webhostapp.com/" class="blog">Javascript Game</a>
+          <br/>
+          <img src= "img/game.jpg" height="300px" style="padding-bottom: 20px;">
+          
+          <br />
+          <br />
+          <a href="https://github.com/kramanim/BTC-Monitor" class="blog">Bitcoin Price Monitor</a>
+          <br/>
+          <img src= "img/btc_monitor.jpg" height="400px">          
+      </div>
   </section>
 
 </body>
