--- a/projects.html
+++ b/projects.html
@@ -29,7 +29,7 @@
   <section id="sec2">
     <h2 id="Projects">Projects / Experiments</h2>
 
-    <p>-- Page under construction --</p>
+      <p><small>[Page under construction]</small></p>
         
         <br/>
         <div style="text-align: center;">
